[package]
name = "ipfs_contract"
version = "0.1.0"
edition = "2021"
authors = ["flipchan@riseup.net"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures                   = "0.3"
ipfs-api-backend-hyper    = { git = "https://github.com/ferristseng/rust-ipfs-api"}#//, optional = true }
tokio                     = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
anyhow = "1.0.39"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"

[profile.release]
opt-level = "s" # Make the binary smaller | https://doc.rust-lang.org/cargo/reference/profiles.html
